--- a/styles.css
+++ b/styles.css
@@ -45,14 +45,14 @@ header > span {
 }
 
 table {
-    margin-left: 530px;
+    margin-left: 20%;
     text-align: left;
 }
 
 th {
     text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 200px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    padding-right: 10vw;
     font-size: 20px;
 }
